# tsle

./: .gitignore  Makefile  README.md  config.mk  docker-compose.devel.yml  docker-compose.yml
dbagent/: Dockerfile
game-engine/: Cargo.toml  Dockerfile  Makefile  makefile.mk
game-engine/env/: devel.env
game-engine/src/: app_state.rs  database.rs  game.rs  lib.rs  main.rs  moves.rs  routes.rs  state.rs  store.rs
game-engine/src/game/: api.rs  model.rs  operation.rs  viewpoint.rs
game-engine/src/game/operation/: create_game.rs
game-engine/src/game/viewpoint/: base.rs  casing.rs  rest.rs
game-engine/src/http/: errors.rs
game-engine/src/moves/: api.rs  operation.rs
game-engine/src/moves/operation/: play_move.rs
game-engine/tests/: api.rs
game-engine/webspicy/: Gemfile  config.rb  schema.fio
game-engine/webspicy/formaldoc/game/create/: post.yml
game-engine/webspicy/formaldoc/move/play/: post.yml
