[package]
name = "game-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
once_cell = "1.19"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }
hyper = "1.7.0"
tower = "0.5.2"
dotenv = "0.15"

# Database dependencies
sea-orm = { version = "0.12", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid"] }
chrono = { version = "0.4", features = ["serde"] }

chess = "3.2.0"